Added starter SQSQueueConsumer class with skeleton methods